# rapido_intelligent_system

./: .gitignore  Makefile  README.md  pyproject.toml
data/raw/: customers.csv  drivers.csv  location_demand.csv  time_features.csv
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/__marimo__/session/: demo_marimo_nb.py.json
rapido_intelligent_system/: __init__.py  config.py  dataset.py  features.py  plots.py
rapido_intelligent_system/modeling/: predict.py  train.py
