[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "rapido_intelligent_system"
version = "0.0.1"
description = "Build dashboard and predictive models using rapido datasets"
authors = [
  { name = "kittu" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
dependencies = [
    "loguru",
    "mkdocs",
    "pip",
    "python-dotenv",
    "ruff",
    "tqdm",
    "typer",
]
requires-python = "~=3.14.0"


[tool.ruff]
line-length = 99
src = ["rapido_intelligent_system"]
include = ["pyproject.toml", "rapido_intelligent_system/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["rapido_intelligent_system"]
force-sort-within-sections = true

