[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "rapido_intelligent_system"
version = "0.0.1"
description = "Build dashboard and predictive models using rapido datasets"
authors = [
  { name = "kittu" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
dependencies = [
    "loguru",
    "mkdocs",
    "pip",
    "python-dotenv",
    "tqdm",
    "typer",
]
requires-python = "~=3.14.0"


[tool.ruff]
line-length = 99
src = ["rapido_intelligent_system"]
include = ["pyproject.toml", "rapido_intelligent_system/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["rapido_intelligent_system"]
force-sort-within-sections = true


[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true
[dependency-groups]
dev = [
    "commitizen>=4.16.3",
    "ruff>=0.15.16",
    "ty>=0.0.44",
]
eda = [
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "plotly>=6.8.0",
    "scipy>=1.17.1",
]
ml-classic = [
    "catboost>=1.2.10",
    "lightgbm>=4.6.0",
    "scikit-learn>=1.9.0",
    "xgboost>=3.2.0",
]
notebook = [
    "marimo>=0.23.9",
]
workspace = [
    "marimo>=0.23.9",
]

